# WebTrey

./: .gitattributes  Dockerfile  Dockerfile_bak  README.md  README_bak.md  package-lock.json  package.json  temp_contract_20240606_143311.sol  tsconfig.json  webtrey_rough_flowchart.txt
backend/: pyproject.toml
backend/myenv/: pyvenv.cfg  requirements.txt
backend/myenv/Scripts/: activate  activate-global-python-argcomplete  activate.bat  dul-receive-pack  dul-upload-pack  jsondiff  jsonpatch  jsonpointer  python-argcomplete-check-easy-install-script  register-python-argcomplete  vba_extract.py
backend/scripts/: log_manager.py  retrieveContracts.ts  run_scans.py  scan_manager.py  smart_contract_scan.py  vuln-scan.sh  vuln_scan.py  ws_server.py
backend/scripts/configs/: ssv_network.json  zksync.json
backend/scripts/scans/: burp_scan.py  echidna_scan.py  nikto_scan.py  nmap_scan.py  slither_scan.py  sslscan.py
backend/webtrey/: README.md  pyproject.toml
backend/webtrey/giza/: giza_manager.py  giza_run.py
backend/webtrey/giza/actions/: analyze_logs_action.py  report_action.py  scan_vuln_action.py
backend/webtrey/giza/datasets/: create_datasets.py
backend/webtrey/giza/tasks/: manage_tasks.py
backend/webtrey/webtrey/: predict_cairo_action.py  security_action.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: build-manifest.json  trace
frontend/app/: globals.css
frontend/components/: BountyCard.tsx  Logs.tsx  Mindmap.tsx  Navbar.tsx  Sidebar.tsx  (+1 more)
scripts/: log_manager.py  scan_manager.py  vuln_scan.py
(+446 files in other folders)
