[tool.poetry]
name = "webtrey-dashboard"
version = "0.1.0"
description = "Poetry environment for WebTrey project"
authors = ["Justin Nguyen <jeytech@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "<3.0,>=2.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
